# ProgramsProject

./: build.gradle  import-summary.txt  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
publicmodule/: build.gradle  proguard-rules.pro
publicmodule/src/main/: AndroidManifest.xml
publicmodule/src/main/res/layout/: activity_public_msg_show.xml
publicmodule/src/main/res/raw/: public_ormlite_db_config
publicmodule/src/main/res/values/: strings.xml
remoteprogram/: build.gradle
remoteprogram/src/main/: AndroidManifest.xml
remoteprogram/src/main/res/layout/: activity_remote_function.xml
remoteprogram/src/main/res/menu/: menu_remote_function.xml
remoteprogram/src/main/res/values/: strings.xml
studyprogram/: build.gradle  studyprogram-release.apk
studyprogram/extmodules/genlibs/libpicturedeal/: Android.mk  Application.mk  CMakeLists.txt  photodeal.cpp  photodeal.h
studyprogram/libs/arm64-v8a/objs-debug/jnibusi/: jnibusi.o.d
studyprogram/libs/armeabi-v7a/objs-debug/jnibusi/: jnibusi.o.d
studyprogram/libs/armeabi/objs-debug/jnibusi/: jnibusi.o.d
studyprogram/libs/mips/objs-debug/jnibusi/: jnibusi.o.d
studyprogram/libs/mips64/objs-debug/jnibusi/: jnibusi.o.d
studyprogram/libs/x86/objs-debug/jnibusi/: jnibusi.o.d
studyprogram/libs/x86_64/objs-debug/jnibusi/: jnibusi.o.d
studyprogram/src/main/: AndroidManifest.xml
studyprogram/src/main/cpp/: Android.mk  CMakeLists.txt  jnibusi.cpp  programs_studyprogram_core_businessdeal_JniBusi.h
studyprogram/src/main/res/layout/: activity_study_function.xml  app_bar_study_function.xml  content_study_function.xml
studyprogram/src/main/res/menu/: study_function.xml
studyprogram/src/main/res/values/: strings.xml
uploadFileDemo/: build.gradle
uploadFileDemo/src/main/: AndroidManifest.xml
uploadFileDemo/src/main/assets/: FastSale.sql
uploadFileDemo/src/main/res/drawable/: dotted_line_gray.xml  insurance_details_foot_bt_slector.xml  s_round_corner_down.xml  s_round_corner_up.xml
(+127 files in other folders)
